# divisualisation

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  create_layers.py  example.py  example_2d.py  example_3d.py  pyproject.toml  render.py  requirements.txt  utils.py  wishlist_api.py
data/bacteria/RES/: man_track.txt  man_track0000.tif  man_track0002.tif  man_track0003.tif  man_track0004.tif  man_track0005.tif  man_track0006.tif  man_track0007.tif  man_track0008.tif  man_track0009.tif  man_track0010.tif  man_track0011.tif  man_track0012.tif  man_track0013.tif  man_track0014.tif  man_track0015.tif  man_track0016.tif  man_track0017.tif  man_track0018.tif  man_track0019.tif  man_track0020.tif  man_track0021.tif  man_track0022.tif  man_track0023.tif  man_track0024.tif  man_track0025.tif  man_track0026.tif  man_track0027.tif  man_track0028.tif  man_track0029.tif  man_track0030.tif  man_track0031.tif  man_track0032.tif  man_track0033.tif  man_track0034.tif  man_track0035.tif  man_track0036.tif  man_track0037.tif  man_track0038.tif  man_track0039.tif  (+13 more)
data/bacteria/TRA/: man_track.txt  man_track000001.tif  man_track000003.tif  man_track000004.tif  man_track000005.tif  man_track000006.tif  man_track000007.tif  man_track000008.tif  man_track000009.tif  man_track000010.tif  man_track000011.tif  man_track000012.tif  man_track000013.tif  man_track000014.tif  man_track000015.tif  man_track000016.tif  man_track000017.tif  man_track000018.tif  man_track000019.tif  man_track000020.tif  man_track000021.tif  man_track000022.tif  man_track000023.tif  man_track000024.tif  man_track000025.tif  man_track000026.tif  man_track000027.tif  man_track000028.tif  man_track000029.tif  man_track000030.tif  man_track000031.tif  man_track000032.tif  man_track000033.tif  man_track000034.tif  man_track000035.tif  man_track000036.tif  man_track000037.tif  man_track000038.tif  man_track000039.tif  man_track000040.tif  (+12 more)
data/bacteria/img/: t000000.tif  t000001.tif  t000002.tif  t000003.tif  t000004.tif  t000005.tif  t000006.tif  t000007.tif  t000008.tif  t000009.tif  t000010.tif  t000011.tif  t000012.tif  t000013.tif  (+39 more)
scratch/: clipping_demo.py
src/divisualisation/: __init__.py  create_layers.py  divisualisation.py  utils.py
